{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 21,
  "lineage": "b522512c-546c-3e43-5392-c1bd6fdcac79",
  "resources": [
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0215fc200febc70f8",
            "arn": "arn:aws:ec2:ap-south-1:872018225617:elastic-ip/eipalloc-0215fc200febc70f8",
            "domain": "vpc",
            "id": "eipalloc-0215fc200febc70f8",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-113-7.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.113.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-eip-1",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-eip-1",
              "Owner": "pathology"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_internet_gateway.pathlab",
            "module.aws_network.aws_vpc.pathlab"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe3cc5dac7e964b6",
            "arn": "arn:aws:ec2:ap-south-1:872018225617:elastic-ip/eipalloc-0fe3cc5dac7e964b6",
            "domain": "vpc",
            "id": "eipalloc-0fe3cc5dac7e964b6",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-20-159.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.20.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-eip-2",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-eip-2",
              "Owner": "pathology"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_internet_gateway.pathlab",
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pathlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:internet-gateway/igw-08072073cfa1c33fe",
            "id": "igw-08072073cfa1c33fe",
            "owner_id": "872018225617",
            "tags": {
              "Name": "prod-igw",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-igw",
              "Owner": "pathology"
            },
            "vpc_id": "vpc-08fda86674b334051"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "pathlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0215fc200febc70f8",
            "association_id": "eipassoc-0e8fcde1a8536f306",
            "connectivity_type": "public",
            "id": "nat-0861bc9fd17904aa2",
            "network_interface_id": "eni-0bdae83ca0149fc26",
            "private_ip": "10.0.1.153",
            "public_ip": "15.206.113.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05c3c183ce03574b8",
            "tags": {
              "Name": "prod-nat-1",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-nat-1",
              "Owner": "pathology"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_eip.nat",
            "module.aws_network.aws_internet_gateway.pathlab",
            "module.aws_network.aws_subnet.public",
            "module.aws_network.aws_vpc.pathlab"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe3cc5dac7e964b6",
            "association_id": "eipassoc-02cefbecf411ff009",
            "connectivity_type": "public",
            "id": "nat-09cbcf93694a6f175",
            "network_interface_id": "eni-019d12263c54b053b",
            "private_ip": "10.0.2.128",
            "public_ip": "3.111.20.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08de75165fa1f26e6",
            "tags": {
              "Name": "prod-nat-2",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-nat-2",
              "Owner": "pathology"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_eip.nat",
            "module.aws_network.aws_internet_gateway.pathlab",
            "module.aws_network.aws_subnet.public",
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c0721560e806637a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0861bc9fd17904aa2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0721560e806637a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_eip.nat",
            "module.aws_network.aws_internet_gateway.pathlab",
            "module.aws_network.aws_nat_gateway.pathlab",
            "module.aws_network.aws_route_table.private",
            "module.aws_network.aws_subnet.public",
            "module.aws_network.aws_vpc.pathlab"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09f87b1f07289769e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09cbcf93694a6f175",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f87b1f07289769e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_eip.nat",
            "module.aws_network.aws_internet_gateway.pathlab",
            "module.aws_network.aws_nat_gateway.pathlab",
            "module.aws_network.aws_route_table.private",
            "module.aws_network.aws_subnet.public",
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08072073cfa1c33fe",
            "id": "r-rtb-04705850f7b01070e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04705850f7b01070e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_internet_gateway.pathlab",
            "module.aws_network.aws_route_table.public",
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:route-table/rtb-0c0721560e806637a",
            "id": "rtb-0c0721560e806637a",
            "owner_id": "872018225617",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-private-rt-1",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-private-rt-1",
              "Owner": "pathology"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fda86674b334051"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_vpc.pathlab"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:route-table/rtb-09f87b1f07289769e",
            "id": "rtb-09f87b1f07289769e",
            "owner_id": "872018225617",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-private-rt-2",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-private-rt-2",
              "Owner": "pathology"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fda86674b334051"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:route-table/rtb-04705850f7b01070e",
            "id": "rtb-04705850f7b01070e",
            "owner_id": "872018225617",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-public-rt",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-public-rt",
              "Owner": "pathology"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fda86674b334051"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a7434a2a585530e",
            "route_table_id": "rtb-0c0721560e806637a",
            "subnet_id": "subnet-0d322a1b7b0f58a88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_route_table.private",
            "module.aws_network.aws_subnet.private",
            "module.aws_network.aws_vpc.pathlab"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cbef486a1c4510d",
            "route_table_id": "rtb-09f87b1f07289769e",
            "subnet_id": "subnet-0389402dede9153a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_route_table.private",
            "module.aws_network.aws_subnet.private",
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017a55602df5244df",
            "route_table_id": "rtb-04705850f7b01070e",
            "subnet_id": "subnet-05c3c183ce03574b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_route_table.public",
            "module.aws_network.aws_subnet.public",
            "module.aws_network.aws_vpc.pathlab"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034337563118c2909",
            "route_table_id": "rtb-04705850f7b01070e",
            "subnet_id": "subnet-08de75165fa1f26e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_route_table.public",
            "module.aws_network.aws_subnet.public",
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:subnet/subnet-0d322a1b7b0f58a88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d322a1b7b0f58a88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872018225617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-subnet-1",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-private-subnet-1",
              "Owner": "pathology"
            },
            "vpc_id": "vpc-08fda86674b334051"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_vpc.pathlab"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:subnet/subnet-0389402dede9153a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0389402dede9153a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872018225617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-subnet-2",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-private-subnet-2",
              "Owner": "pathology"
            },
            "vpc_id": "vpc-08fda86674b334051"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:subnet/subnet-05c3c183ce03574b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c3c183ce03574b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872018225617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-subnet-1",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-public-subnet-1",
              "Owner": "pathology"
            },
            "vpc_id": "vpc-08fda86674b334051"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_vpc.pathlab"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:subnet/subnet-08de75165fa1f26e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08de75165fa1f26e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872018225617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-subnet-2",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-public-subnet-2",
              "Owner": "pathology"
            },
            "vpc_id": "vpc-08fda86674b334051"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_network.aws_vpc.pathlab"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pathlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:vpc/vpc-08fda86674b334051",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe1608ac90f7e7b0",
            "default_route_table_id": "rtb-01569503c93b8f063",
            "default_security_group_id": "sg-0da666a5d094cf0d7",
            "dhcp_options_id": "dopt-00145aa7cf6dd16df",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fda86674b334051",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01569503c93b8f063",
            "owner_id": "872018225617",
            "tags": {
              "Name": "prod-vpc",
              "Owner": "pathology"
            },
            "tags_all": {
              "Name": "prod-vpc",
              "Owner": "pathology"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}